src/objects/PM_Project__c.object
<CustomObject>
    <fields>
        <fullName>Regional_Sales_Manager__c</fullName>
        <label>Regional Sales Manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SREC_Application_Package__c</fullName>
        <label>SREC Application Package</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SREC_Comments__c</fullName>
        <description>Comments related to the SREC.</description>
        <inlineHelpText>Comments related to the SREC.</inlineHelpText>
        <label>SREC Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SREC_Docs__c</fullName>
        <label>SREC Docs</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SREC_Status__c</fullName>
        <description>Shows the status of the SRECs for this project as it moves through the process.

1. Initial Package Not Submitted
2. Initial SREC Package Submitted
3. Initial SREC Application Approved
4. PTO, Final SREC Application Not Submitted
5. Final Application Submitted, not Approved
6. Final SREC Docs Approved</description>
        <formula>IF(  AND( OR(Installation_State__c = &quot;NJ&quot;, Installation_State__c = &quot;MA&quot;) &amp;&amp; ISBLANK(NJ_SREC_Application_Package__c)),
   &quot;1. Initial Package Not Submitted&quot;,

/*ELSE*/
   IF( AND( OR(Installation_State__c = &quot;NJ&quot;, Installation_State__c = &quot;MA&quot;) &amp;&amp; ISBLANK(NJ_SREC_Docs__c)),
      &quot;2. Initial SREC Package Submitted&quot;,

   /*ELSE*/
      IF( ISBLANK(Approved_Utility_Interconnect_Part_2__c),
         &quot;3. Initial SREC Application Approved&quot;,

      /*ELSE*/
         IF( ISBLANK(SREC_Application_Package__c),
            &quot;4. PTO, Final SREC Application Not Submitted&quot;,

         /*ELSE*/
            IF( ISBLANK(SREC_Docs__c),
               &quot;5. Final Application Submitted, not Approved&quot;,

            /*ELSE*/
               &quot;6. Final SREC Docs Approved&quot;
            )
         )
      )
   )
)</formula>
        <inlineHelpText>Shows the status of the SRECs for this project as it moves through the process.</inlineHelpText>
        <label>SREC Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Date_Week_Start__c</fullName>
        <formula>Sale_Date__c - (MOD( Sale_Date__c - DATE(1900, 1, 6), 7))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Date Week Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sale_Date__c</fullName>
        <formula>Sales_Order__r.OpportunityId__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>SCRB_SalesOrder__c</referenceTo>
        <relationshipLabel>PM Projects</relationshipLabel>
        <relationshipName>PM_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sold_PM_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signed_Conduit_Run_and_Layout__c</fullName>
        <label>Signed Conduit Run and Layout</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solar_Engineering__c</fullName>
        <label>Solar Engineering</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_Parts_Required__c</fullName>
        <description>Are Special Parts Required On This Project?</description>
        <formula>IF(Sales_Order__r.System_Design_Quote__r.System_Design__r.Number_of_Arrays_With_Special_Parts__c &gt;0,&apos;YES&apos;,&apos;NO&apos;)</formula>
        <inlineHelpText>Are Special Parts Required On This Project?</inlineHelpText>
        <label>Special Parts Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Structural_Engineer__c</fullName>
        <description>Displays the value of either the Internal Structural Engineer, or the External Structural Engineer. This is used in reporting so that 1 field can be used to group the Structural Engineer</description>
        <formula>IF( ISBLANK(Internal_Structural_Engineer__c),
   External_Structural_Engineer__r.Name,
/*ELSE*/
   Internal_Structural_Engineer__r.FirstName &amp; &quot; &quot; &amp; Internal_Structural_Engineer__r.LastName
)</formula>
        <inlineHelpText>Displays the value of either the Internal Structural Engineer, or the External Structural Engineer. This is used in reporting so that 1 field can be used to group the Structural Engineer</inlineHelpText>
        <label>Structural Engineer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Structural_Engineering_Group__c</fullName>
        <description>Helps enforce that only one of the lookup fields (Internal Structural Engineer or External Structural Engineer) are populated. Default value is &quot;External&quot;. The &quot;Update PM Project Structural Engineer to Internal&quot; process will update this field to Internal</description>
        <inlineHelpText>Helps enforce that only one of the lookup fields (Internal Structural Engineer or External Structural Engineer) are populated. Default value is &quot;External&quot;. The &quot;Update PM Project Structural Engineer to Internal&quot; process will update this field to Internal</inlineHelpText>
        <label>Structural Engineering Group</label>
        <picklist>
            <picklistValues>
                <fullName>External</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Structural_Engineering_Review__c</fullName>
        <label>Structural Engineering Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Structural_Engineering__c</fullName>
        <label>Structural Engineering</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Structural_Review__c</fullName>
        <label>Structural Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submit_Building_Permit_to_Approved__c</fullName>
        <description>Time from Building Permit Submitted to Approved</description>
        <formula>Building_Permit__c -  Building_Permit_Submitted__c</formula>
        <label>Submit Building Permit to Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submit_Electrical_Permit_to_Approved__c</fullName>
        <description>Time from Electrical Permit Submitted to Approved</description>
        <formula>Electrical_Permit__c - Electrical_Permit_Submitted__c</formula>
        <label>Submit Electrical Permit to Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submit_Grant_Completion_to_Approved__c</fullName>
        <description>Time from Grant Completion Submitted to Approved</description>
        <formula>Grant_Completion__c - Grant_Completion_Submitted__c</formula>
        <label>Submit Grant Completion to Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submit_Grant_Reservation_to_Approved__c</fullName>
        <description>Time from Grant Reservation Submitted to Approved</description>
        <formula>Grant_Documents__c - Grant_Reservation_Submitted__c</formula>
        <label>Submit Grant Reseration to Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submit_Utility_Interconnect_Part_1__c</fullName>
        <label>Submit Utility Interconnect Part 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submit_Utility_Interconnect_to_Approved1__c</fullName>
        <description>Time from submit utility interconnect to approved by PL (PART ONE)</description>
        <formula>Approved_Utility_Interconnect_Part_1__c - Submit_Utility_Interconnect_Part_1__c</formula>
        <label>Submit Utility Interconnect to Approved1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submit_Utility_Interconnect_to_Approved2__c</fullName>
        <description>Time from submit utility interconnect to approved (PART 2)</description>
        <formula>Approved_Utility_Interconnect_Part_2__c -  Submitted_Utility_Interconnect_Part_2__c</formula>
        <label>Submit Utility Interconnect to Approved2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted_Utility_Interconnect_Part_2__c</fullName>
        <label>Submitted Utility Interconnect Part 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sunpower_Warranty_Cards__c</fullName>
        <label>Sunpower Warranty Cards</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <label>Survey Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Docs__c</fullName>
        <label>Survey Docs</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Photographs__c</fullName>
        <label>Survey Photographs</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Sketch__c</fullName>
        <label>Survey Sketch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_Designer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System Designer assigned to this PM Project.</description>
        <inlineHelpText>System Designer assigned to this PM Project.</inlineHelpText>
        <label>Operations Surveyor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PM_Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Elec_Review_to_Building_Perm_Submit__c</fullName>
        <description>Time Elec Review to Building Perm Submit reflects the number of days between Electrical Review and Building Permit Submitted</description>
        <formula>Building_Permit_Submitted__c  -  Electrical_Review__c</formula>
        <label>Time Elec Review to Building Perm Submit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Elec_Review_to_Elec_Permit_Submit__c</fullName>
        <description>Time Elec Review to Elec Permit Submit reflects the number of days between Electrical Review and Electrical Permit Submitted</description>
        <formula>Electrical_Permit_Submitted__c  -  Electrical_Review__c</formula>
        <label>Time Elec Review to Elec Permit Submit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Kickoff_to_Elec_Review_Info_Submit__c</fullName>
        <description>Time Kickoff to Elec Review Info Submit reflects the number of days between Kickoff and Electrical Review Information Submitted</description>
        <formula>Electrical_Review_Submitted__c  - DATEVALUE ( Kickoff__c )</formula>
        <label>Time Kickoff to Elec Review Info Submit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Kickoff_to_Signed_Conduit_Run_L_O__c</fullName>
        <description>Time Kickoff to Signed Conduit Run &amp; L/O reflects the number of days between Signed Conduit Run and Layout, and Kickoff</description>
        <formula>Signed_Conduit_Run_and_Layout__c  - DATEVALUE ( Kickoff__c )</formula>
        <label>Time Kickoff to Signed Conduit Run &amp; L/O</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_from_Created_to_Install__c</fullName>
        <description>Returns the month of installation, a number between 1 (January) and 12 (December)</description>
        <formula>MONTH(Install__c )</formula>
        <inlineHelpText>Returns the month of installation, a number between 1 (January) and 12 (December)</inlineHelpText>
        <label>Install Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_from_Install_to_Inspection__c</fullName>
        <description>Time from Install to Inspection</description>
        <formula>Proof_of_Inspection__c - Install__c</formula>
        <label>Time from Install to Inspection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_from_Kickoff_to_Install_Prep_Sheet__c</fullName>
        <description>Time from Kickoff to Install Prep Sheet reflects the number of days between Kickoff and Install Prep Sheet</description>
        <formula>Install_Prep_Sheet__c  - DATEVALUE ( Kickoff__c )</formula>
        <label>Time from Kickoff to Install Prep Sheet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_from_Kickoff_to_Kickoff_Photos__c</fullName>
        <description>Time from Kickoff to Kickoff Photos reflects the number of days between Kickoff and Kickoff Photos</description>
        <formula>Kickoff_Photos__c  - DATEVALUE ( Kickoff__c )</formula>
        <label>Time from Kickoff to Kickoff Photos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_from_Project_Creation_to_Inspection__c</fullName>
        <description>Time from Project Creation to Inspection</description>
        <formula>Proof_of_Inspection__c  -  DATEVALUE(  CreatedDate )</formula>
        <label>Time from Project Creation to Inspection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_from_Project_Creation_to_Install__c</fullName>
        <description>Time from Project Creation to Install</description>
        <formula>Install__c - DATEVALUE( CreatedDate )</formula>
        <label>Time from Project Creation to Install</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_from_Project_Creation_to_Kickoff__c</fullName>
        <description>Time from Project Creation to Kickoff</description>
        <formula>DATEVALUE( Kickoff__c) - DATEVALUE( CreatedDate )</formula>
        <label>Time from Project Creation to Kickoff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_System_Cost__c</fullName>
        <formula>Sales_Order__r.Amount__c</formula>
        <label>Total System Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_System_Size_kW_DC__c</fullName>
        <formula>Sales_Order__r.System_Size_kW__c</formula>
        <label>Total System Size (kW DC)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utility_Bill__c</fullName>
        <label>Utility Bill</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Utility_Interconnect_Part_2_Approval__c</fullName>
        <label>Utility Interconnect Part 2 Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Completed__c</fullName>
        <label>Work Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Completed_to_Proof_of_Inspection__c</fullName>
        <description>Work Completed to Proof of Inspection</description>
        <formula>Proof_of_Inspection__c - Work_Completed__c</formula>
        <inlineHelpText>Work Completed to Proof of Inspection</inlineHelpText>
        <label>Work Completed to Proof of Inspection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related Rootstock Work Order. This lookup is used to update the related Work Order when the PM Project is updated.</description>
        <inlineHelpText>The related Rootstock Work Order.</inlineHelpText>
        <label>Primary Work Order</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>PM Projects</relationshipLabel>
        <relationshipName>PM_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>three_Line_diagram__c</fullName>
        <label>3 Line diagram</label>
        <type>Date</type>
    </fields>
    <label>PM Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PM Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PMP001_Internal_vs_External_Struct_Engin</fullName>
        <active>true</active>
        <description>You may specify an Internal Structural Engineer or External Structural Engineer, but not both. PMP001</description>
        <errorConditionFormula>!ISBLANK(Internal_Structural_Engineer__c) 
&amp;&amp; 
!ISBLANK(External_Structural_Engineer__c)</errorConditionFormula>
        <errorDisplayField>External_Structural_Engineer__c</errorDisplayField>
        <errorMessage>You may specify an Internal Structural Engineer or External Structural Engineer, but not both. PMP001</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMP002_Internal_vs_External_Struct_Engin</fullName>
        <active>true</active>
        <description>You may specify an Internal Structural Engineer or External Structural Engineer, but not both. PMP002</description>
        <errorConditionFormula>!ISBLANK(Internal_Structural_Engineer__c)
&amp;&amp;
!ISBLANK(External_Structural_Engineer__c)</errorConditionFormula>
        <errorDisplayField>Internal_Structural_Engineer__c</errorDisplayField>
        <errorMessage>You may specify an Internal Structural Engineer or External Structural Engineer, but not both. PMP002</errorMessage>
    </validationRules>
</CustomObject>